# StyleLaborLauncher-v1

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src-tauri/: .gitignore  .taurignore  Cargo.toml  EULA.txt  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  discord.rs  gallery.rs  java.rs  launcher.rs  logs.rs  mclogs.rs  mod.rs  modpack.rs  monitor.rs  profile.rs  settings.rs  skin.rs  user_mod.rs
src-tauri/src/models/: account.rs  manifest.rs  minecraft.rs  mod.rs  profile.rs
src-tauri/src/services/: auth.rs  curseforge.rs  discord.rs  fabric.rs  forge.rs  java.rs  log_analyzer.rs  minecraft.rs  mod.rs  modrinth.rs  neoforge.rs  quilt.rs  screenshot_watcher.rs
src-tauri/src/utils/: download.rs  hash.rs  mod.rs  names.rs  paths.rs
src-tauri/target-check/debug/.fingerprint/adler2-13e47446cb85deff/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/adler2-48a685ef75be83e1/: lib-adler2  lib-adler2.json
src-tauri/target-check/debug/.fingerprint/aes-f9d1aa63c5259096/: lib-aes  lib-aes.json
src-tauri/target-check/debug/.fingerprint/aho-corasick-a9075eff487a8713/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-check/debug/.fingerprint/alloc-no-stdlib-062a3783035b107f/: lib-alloc_no_stdlib
src-tauri/target-check/debug/.fingerprint/alloc-no-stdlib-1f84b62a56b98bda/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-check/debug/.fingerprint/anyhow-45b776acfbf9f7ed/: lib-anyhow  (+1 more)
src-tauri/target-check2/: .rustc_info.json
(+1278 files in other folders)
