[package]
name = "stylelabor-launcher"
version = "2026.1.3"
description = "A custom Minecraft launcher"
authors = ["StyleLabor"]
edition = "2021"

[lib]
name = "stylelabor_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# ZIP handling
async_zip = { version = "0.0.17", features = ["full"] }
zip = "0.6"
tokio-util = { version = "0.7", features = ["compat"] }

# Crypto
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
rand = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
uuid = { version = "1", features = ["v3", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
dirs = "6"
sysinfo = "0.32"
urlencoding = "2"
flate2 = "1.1.5"
tar = "0.4.44"
rayon = "1.11.0"
regex = "1.10"
notify = "6"
discord-rich-presence = "0.2"
semver = "1.0"
arboard = { version = "3", features = ["image-data"] }
image = "0.24"

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
opt-level = 3
